# ifcopenshell

./: .env  .gitignore  Achse.IFC  BM_Strasse_4x3_upgraded.ifc  IFC4_to_IFC4x3.md  OD_Matten_4x3.ifc  README.md  check_ifc_elements.py  check_ifc_geometry.py  ifc_merger_test.py  pyproject.toml
00_Utilities/: check_ifc_elements.py  check_ifc_geometry.py
01_Source_IFCs/: 4x3.ifc  BM_Strasse_Erg_1.ifc  OD-MATTEN_Brunnen.ifc  OD-MATTEN_Brunnen_WAS.ifc  OD-MATTEN_ELE.ifc  OD-MATTEN_GAS.ifc  OD-MATTEN_SEW.ifc  OD-MATTEN_WAS.ifc  OD-Matten_Kanalfernsehen_Bödeli.IFC  SEW-Schacht.ifc
02_Generated_IFCs/: road_axis_example.ifc
03_Scripts/: create_entity.py  create_ifc4x3.py  create_road_axis.py  ifc_merger.py
04_Docs/: BEP_Anhang_03_Elementplan.xlsx  IfcRoad.md  Road_Axis_in_IFC.md  error.md
Annotation/02_Generated_IFCs/: annotated_road_axis.ifc  annotated_road_axis_final.ifc
Annotation/03_Scripts/: annotate_existing_axis.py  create_annotation.py  debug_schema.py  debug_schema_full.py  validate_annotated_axis.py
IFC_Upgrade_and_Merge/03_Scripts/: ifc_merger.py
IFCs/: BM_Gemeindegrenzen.ifc  BM_Strasse_Erg_1-IFC4X3.ifc  OD-MATTEN_Swisscom.ifc  OD_Matten_Schächte_angepasst_in_Höhe.IFC  Schleppkurven_3d.ifc  ifc_reader.py
Road_Axis/02_Generated_IFCs/: road_axis_with_arc.ifc
Road_Axis/03_Scripts/: create_road_axis_with_arc.py
Road_Axis/04_Docs/: IfcAlignment_Summary.md
Stakeout_Points/03_Scripts/: analyze_axis.py  (+2 more)
mia_cli/: __main__.py  cli.py  config.py  logo.py
mia_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+2 files in other folders)
